src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>APS_openSMS__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_openSMS__Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_openSMS__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_openSMS__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_openSMS__SMS_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <picklist>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26 - 35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 - 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46 - 55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 55</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Email_1__c</fullName>
        <label>Alternate Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_Email_2__c</fullName>
        <label>Alternate Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_2__c</fullName>
        <label>Alternate Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_Range__c</fullName>
        <label>Area Range</label>
        <picklist>
            <picklistValues>
                <fullName>500 - 600 sq.ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600 - 700 sqft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700 - 800 sq.ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 - 900 sq.ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900 - 1000 sq.ft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bedroom_Preferrences__c</fullName>
        <label>Bedroom Preferrences</label>
        <picklist>
            <picklistValues>
                <fullName>1 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 BHK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BrokerFirm2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please enter the name of the second broker.</inlineHelpText>
        <label>Broker Firm 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brokers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Broker2 Name)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BrokerName2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please enter the name of the broker from broker firm2</inlineHelpText>
        <label>Broker Name 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Broker Name 2)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker Firm</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brokers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Broker Firm)</relationshipLabel>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Broker_Firm__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Broker Name)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 40 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41-60 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61-80 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-100 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-125 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>126-150 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-175 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>176-200 Lac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Than 200 Lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - 4 Crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-5 Crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-6 Crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-8 Crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-10 Crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-12 Crore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Than 12 Crore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCUCampaignDetails__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCU Campaign Details</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (CCUCampaignDetails)</relationshipLabel>
        <relationshipName>Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCU_Broker_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCU Broker Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brokers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (CCU Broker Code)</relationshipLabel>
        <relationshipName>Leads4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCU_Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU_Referee_Customer_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCU Referee Customer Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account, Person Account</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (CCU Referee Customer Code)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCU_Source__c</fullName>
        <label>CCU Source</label>
        <picklist>
            <picklistValues>
                <fullName>Newspapers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoardings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWG Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWG Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <description>Campaign code is sent as hidden fields in web forms. Use this to identify the corresponding campaign and add the campaign to lead</description>
        <label>Campaign Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Point__c</fullName>
        <label>Capture Point</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Code__c</fullName>
        <description>populated with the channel code received from web form submission</description>
        <label>Channel Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Name</label>
        <referenceTo>Channel__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Stage__c</fullName>
        <label>Completion Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Under- construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nearing Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-launch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CounterForCall__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CounterForCall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>India[+91]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States[+1]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAE[+971]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom[+44]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateForCall__c</fullName>
        <label>DateForCall</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DuplicatesIdentified__c</fullName>
        <label>DuplicatesIdentified</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailType__c</fullName>
        <label>Email Type</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethinicity__c</fullName>
        <label>Ethinicity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Size__c</fullName>
        <label>Family Size</label>
        <picklist>
            <picklistValues>
                <fullName>less than 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 or 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 or 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 or 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>more than 7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FirmAgent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestDuplicates__c</fullName>
        <label>LatestDuplicates</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Local_Contact_Email__c</fullName>
        <inlineHelpText>In case of NRI Leads, Please capture the EmailId of a local contact.</inlineHelpText>
        <label>Local Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Local_Contact_Number__c</fullName>
        <inlineHelpText>In case of NRI Leads, Please enter the contact number of a local contact.</inlineHelpText>
        <label>Local Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Local_Name__c</fullName>
        <inlineHelpText>In case of NRI Leads, Please enter name of a local contact.</inlineHelpText>
        <label>Local Contact Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MasterRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Master chosen for the duplicate merge logic</description>
        <label>MasterRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Maker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpportunityProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Leads (ProjectOfPrimaryInterest)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page_Url__c</fullName>
        <label>Page Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Place_Of_Work__c</fullName>
        <label>Place Of Work</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <label>Placement</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Location_Details__c</fullName>
        <label>Preferred Location Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Location__c</fullName>
        <label>Preferred Location</label>
        <picklist>
            <picklistValues>
                <fullName>Same as Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preffered_Phone_Dialing_Code__c</fullName>
        <label>Preffered Phone Dialing Code</label>
        <picklist>
            <picklistValues>
                <fullName>091</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>214</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>534</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>044</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProjectLookup</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Interest__c</fullName>
        <label>Project Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Project A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Interested_In__c</fullName>
        <label>Project Interested In</label>
        <picklist>
            <picklistValues>
                <fullName>Ozone Urbana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Metrozone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Island Developments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Gardenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projects_of_Interest__c</fullName>
        <label>Projects of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Project A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project F</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <picklist>
            <picklistValues>
                <fullName>Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Villa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penthouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bungalow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cottage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Row house</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose_Of_Purchase__c</fullName>
        <label>Purpose Of Purchase</label>
        <picklist>
            <picklistValues>
                <fullName>End Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating_Manual__c</fullName>
        <label>Rating (Manual)</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating_System__c</fullName>
        <label>Rating (System)</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reasons_for_closed_Lost__c</fullName>
        <label>Reasons for closed (Lost)</label>
        <picklist>
            <picklistValues>
                <fullName>Beyond Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped Idea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less/more Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluating  Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vastu Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased Elsewhere</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Status__c</fullName>
        <label>Residential Status</label>
        <picklist>
            <picklistValues>
                <fullName>Indian</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <picklist>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thane</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Campaign_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Details(System)</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (System Campaign Details)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TestUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestingDepLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TestingDepLookup</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tollfree_Number__c</fullName>
        <label>Tollfree Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>APS_openSMS__Open_SMS</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.COMPANY</columns>
        <filterScope>Everything</filterScope>
        <label>Open SMS</label>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>Tollfree_Number__c</columns>
        <columns>Campaign_Code__c</columns>
        <columns>Channel_Code__c</columns>
        <columns>Channel_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
</CustomObject>